5tuay10bath/backend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: fivetuay10bath-backend-service
  namespace: fivetuay10bath-app
spec:
  type: ClusterIP
  selector:
    app: fivetuay10bath-backend
  ports:
    - port: 8080
      targetPort: 8080


---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: 5tuay10bath-backend-deployment
  namespace: 5tuay10bath-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 5tuay10bath-backend
  template:
    metadata:
      labels:
        app: 5tuay10bath-backend
    spec:
      containers:
        - name: 5tuay10bath-backend
          image: iamyasuomain/deawkoikid_backend:latest
          ports:
            - containerPort: 8080
