5tuay10bath/frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: fivetuay10bath-frontend-service
  namespace: fivetuay10bath-app
spec:
  selector:
    app: fivetuay10bath-frontend
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP

---

piVersion: apps/v1
kind: Deployment
metadata:
  name: fivetuay10bath-frontend-deployment
  namespace: fivetuay10bath-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fivetuay10bath-frontend
  template:
    metadata:
      labels:
        app: fivetuay10bath-frontend
    spec:
      containers:
        - name: fivetuay10bath-frontend
          image: iamyasuomain/deawkoikid_frontend:latest
          ports:
            - containerPort: 3000
