5tuay10bath/fe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 5tuay10bath-fe-ingress
  namespace: 5tuay10bath-app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - muict.app
      secretName: muict-app-tls
  rules:
    - host: muict.app
      http:
        paths:
          - path: /5tuay10bath-frontend(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: 5tuay10bath-frontend-service
                port:
                  number: 80
